Composer.json license name modified

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 
     "keywords": ["framework", "posttype", "taxonomies"],
 
-    "license": "GPLv3",
+    "license": "GPL-3.0-or-later",
 
     "authors": [
 
@@ -19,7 +19,6 @@
         }
 
     ],
-
 
     "autoload": {
         "psr-4": {
